metadata/force-app/main/default/objects/CustomName_UONGP__c/CustomName_UONGP__c.object-meta.xml
<CustomObject>
    <description>Description_qlfhl</description>
    <label>CustomLabel_wFsUs</label>
    <nameField>
        <label>CustomLabel_wFsUs</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_wFsUss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>