metadata/force-app/main/default/objects/CustomName_UONGP__c/fields/CustomField_MgaNE__c.field-meta.xml
<CustomField>
    <fullName>CustomField_MgaNE__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldWKKoK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>